# gist

./: .dockerignore  .env.dev  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.dev.override.yml  docker-compose.override.yml  docker-compose.test.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: CLAUDE.md  build-and-push.yml  build-check.yml  ci-cd-pipeline.yml  e2e-tests.yml  format-and-lint.yml  run-tests.yml
apps/gist/: CALUDE.md  apps.py  tasks.py  urls.py  views.py
apps/gist/clients/: llm_api_client.py
apps/gist/services/: __init__.py  scraping_service.py  summarization_service.py
apps/gist/templates/gist/: index.html
config/: celery.py  settings.py  urls.py
nginx/: nginx.conf
src/gist/: apps.py  urls.py  views.py
src/gist/services/: __init__.py  scraping_service.py  summarization_service.py
src/gist/templates/gist/: index.html
tests/: CLAUDE.md  test_api.py
tests/e2e/: conftest.py  test_e2e.py  test_e2e_api.py
tests/services/: test_scraping_service.py  test_summarization_service.py
tests/unit/: conftest.py
tests/unit/services/: test_scraping_service.py  test_summarization_service.py
